--- a/_bibliography/muratore-ginanneschi.bib
+++ b/_bibliography/muratore-ginanneschi.bib
@@ -1133,4 +1133,22 @@
   ranking     = {{Minimal-work protocols for inertial particles in non-harmonic traps}},
 }
 
+@Article{CaBaLuMGVu2024,
+  author        = {Cattaneo, Marco and Baldovin, Marco and Lucente, Dario and Muratore-Ginanneschi, Paolo and Vulpiani, Angelo},
+  journal       = {Eprint arXiv:2409.06489},
+  title         = {{Thermalization is typical in large classical and quantum harmonic systems}},
+  year          = {2024},
+  abbr          = {Eprint},
+  month         = sep,
+  abstract      = {We establish an analytical criterion for dynamical thermalization within harmonic systems, applicable to both classical and quantum models. Specifically, we prove that thermalization of various observables, such as particle energies in physically relevant random quadratic Hamiltonians, is typical for large systems ($N \gg 1$) with initial conditions drawn from the microcanonical distribution. Moreover, we show that thermalization can also arise from non-typical initial conditions, where only a finite fraction of the normal modes is excited. Our findings provide a general dynamical basis for an approach to thermalization that bypasses chaos and ergodicity, focusing instead on observables dependent on a large number of normal modes, and build a bridge between the classical and quantum theories of thermalization.},
+  archiveprefix = {arXiv},
+  copyright     = {arXiv.org perpetual, non-exclusive license},
+  doi           = {10.48550/ARXIV.2409.06489},
+  eprint        = {2409.06489},
+  owner         = {paolo},
+  primaryclass  = {cond-mat.stat-mech},
+  publisher     = {arXiv},
+  ranking       = {{Thermalization is typical in large classical and quantum harmonic systems}},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
