--- a/_bibliography/muratore-ginanneschi.bib
+++ b/_bibliography/muratore-ginanneschi.bib
@@ -1080,20 +1080,23 @@
 
 @Article{Sanders2024,
   author        = {Sanders, Julia and Baldovin, Marco and Muratore-Ginanneschi, Paolo},
-  journal       = {Eprint arXiv:2403.00679},
+  journal       = {Journal of Statistical Physics},
   title         = {{Optimal Control of Underdamped Systems: An Analytic Approach}},
   year          = {2024},
-  abbr          = {Eprint},
-  month         = mar,
+  abbr          = {J. Stat. Phys.},
+  month         = sep,
+  number        = {117},
+  volume        = {119},
   abstract      = {Optimal control theory deals with finding protocols to steer a system between assigned initial and final states, such that a trajectory-dependent cost function is minimized. The application of optimal control to stochastic systems is an open and challenging research frontier, with a spectrum of applications ranging from stochastic thermodynamics, to biophysics and data science. Among these, the design of nanoscale electronic components motivates the study of underdamped dynamics, leading to practical and conceptual difficulties. In this work, we develop analytic techniques to determine protocols steering finite time transitions at minimum dissipation for stochastic underdamped dynamics. For transitions between Gaussian states, we prove that optimal protocols satisfy a Lyapunov equation, a central tool in stability analysis of dynamical systems. For transitions between states described by general Maxwell-Boltzmann distributions, we introduce an infinite-dimensional version of the Poincar\'e-Linstedt multiscale perturbation theory around the overdamped limit. This technique fundamentally improves the standard multiscale expansion. Indeed, it enables the explicit computation of momentum cumulants, whose variation in time is a distinctive trait of underdamped dynamics and is directly accessible to experimental observation. Our results allow us to numerically study cost asymmetries in expansion and compression processes and make predictions for inertial corrections to optimal protocols in the Landauer erasure problem at the nanoscale.},
   archiveprefix = {arXiv},
   copyright     = {arXiv.org perpetual, non-exclusive license},
-  doi           = {10.48550/ARXIV.2403.00679},
+  doi           = {10.1007/s10955-024-03320-w},
   eprint        = {2403.00679},
   owner         = {paolo},
   primaryclass  = {cond-mat.stat-mech},
   publisher     = {arXiv},
   ranking       = {{Optimal Control of Underdamped Systems: An Analytic Approach}},
+  url           = {https://doi.org/10.1007/s10955-024-03320-w},
 }
 
 @Article{MGKiCh2024,
@@ -1149,6 +1152,7 @@
   primaryclass  = {cond-mat.stat-mech},
   publisher     = {arXiv},
   ranking       = {{Thermalization is typical in large classical and quantum harmonic systems}},
+  url           = {https://doi.org/10.48550/arXiv.2409.06489},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
