--- a/_bibliography/muratore-ginanneschi.bib
+++ b/_bibliography/muratore-ginanneschi.bib
@@ -1155,4 +1155,22 @@
   url           = {https://doi.org/10.48550/arXiv.2409.06489},
 }
 
+@Article{SaMG2024,
+  author        = {Sanders, Julia and Muratore-Ginanneschi, Paolo},
+  journal       = {Eprint arXiv:2411.08518},
+  title         = {{On the numerical integration of the Fokker-Planck equation driven by a mechanical force and the Bismut-Elworthy-Li formula}},
+  year          = {2024},
+  abbr          = {Eprint},
+  month         = nov,
+  abstract      = {Optimal control theory aims to find an optimal protocol to steer a system between assigned boundary conditions while minimizing a given cost functional in finite time. Equations arising from these types of problems are often non-linear and difficult to solve numerically. In this note, we describe numerical methods of integration for two partial differential equations that commonly arise in optimal control theory: the Fokker-Planck equation driven by a mechanical potential for which we use Girsanov theorem; and the Hamilton-Jacobi-Bellman, or dynamic programming, equation for which we find the gradient of its solution using the Bismut-Elworthy-Li formula. The computation of the gradient is necessary to specify the optimal protocol. Finally, we give an example application in solving an optimal control problem without spacial discretization by machine learning.},
+  archiveprefix = {arXiv},
+  copyright     = {arXiv.org perpetual, non-exclusive license},
+  doi           = {10.48550/ARXIV.2411.08518},
+  eprint        = {2411.08518},
+  owner         = {paolo},
+  primaryclass  = {math.OC},
+  publisher     = {arXiv},
+  ranking       = {{On the numerical integration of the Fokker-Planck equation driven by a mechanical force and the Bismut-Elworthy-Li formula}},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
