--- a/_bibliography/muratore-ginanneschi_seminars.bib
+++ b/_bibliography/muratore-ginanneschi_seminars.bib
@@ -135,6 +135,18 @@
   url        = {https://www.youtube.com/watch?v=TNeNHVO5dgE},
 }
 
+@Seminar{cam2024,
+  abbr       = {Talk},
+  date       = {2024-11-19},
+  location   = {University of Cambridge, DAMTP Statistical Physics and Soft Matter Seminar},
+  title      = {{Generalized Schr\"odinger bridges in stochastic thermodynamics}},
+  year       = {2024},
+  eventtitle = {Invited talk DAMTP Statistical Physics and Soft Matter Seminar Series},
+  owner      = {paolo},
+  pdf        = {Langevin_Kramers_Cambridge_2024.pdf},
+  url        = {https://talks.cam.ac.uk/show/index/82330},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-entrytype: seminar: req[title;year;date;location;Abbr] opt[Recording;eventtitle;author]}
