--- a/_bibliography/muratore-ginanneschi.bib
+++ b/_bibliography/muratore-ginanneschi.bib
@@ -1110,13 +1110,14 @@
   abstract    = {Relaxation rates provide important characteristics both for classical and quantum processes. Essentially they control how fast the system thermalizes, equilibrates, {decoheres, and/or dissipates}. Moreover, very often they are directly accessible to be measured in the laboratory and hence they define key physical properties of the system. Experimentally measured relaxation rates can be used to test validity of a particular theoretical model. Here we analyze a fundamental question: {\em does quantum mechanics provide any nontrivial constraint for relaxation rates?} We prove the conjecture formulated a few years ago that any quantum channel implies that a maximal rate is bounded from above by the sum of all the relaxation rates divided by the dimension of the Hilbert space. It should be stressed that this constraint is universal (it is valid for all quantum systems with finite number of energy levels) and it is tight (cannot be improved). In addition, the constraint plays an analogous role to the seminal Bell inequalities and the well known Leggett-Garg inequalities (sometimes called temporal Bell inequalities). Violations of Bell inequalities rule out local hidden variable models, and violations of Leggett-Garg inequalities rule out macrorealism. Similarly, violations of the bound rule out completely positive-divisible evolution.},
   copyright   = {arXiv.org perpetual, non-exclusive license},
   date        = {2024-08-31},
-  doi         = {10.48550/ARXIV.2409.00436},
+  doi         = {10.1088/1751-8121/adaa3f},
   eprint      = {2409.00436},
   eprintclass = {quant-ph},
   eprinttype  = {arXiv},
   owner       = {paolo},
   publisher   = {IOP},
   ranking     = {{Universal bound on the relaxation rates for quantum Markovian dynamics}},
+  url         = {https://doi.org/10.1088/1751-8121/adaa3f},
 }
 
 @Article{SaBaMG2024_2,
