--- a/_bibliography/muratore-ginanneschi.bib
+++ b/_bibliography/muratore-ginanneschi.bib
@@ -1160,21 +1160,24 @@
 
 @Article{SaMG2024,
   author        = {Sanders, Julia and Muratore-Ginanneschi, Paolo},
-  journal       = {Eprint arXiv:2411.08518},
+  journal       = {Entropy},
   title         = {{On the numerical integration of the Fokker-Planck equation driven by a mechanical force and the Bismut-Elworthy-Li formula}},
   year          = {2024},
-  abbr          = {Eprint},
-  month         = nov,
+  abbr          = {MDPI},
+  month         = feb,
+  number        = {3},
+  pages         = {218},
+  volume        = {27},
   abstract      = {Optimal control theory aims to find an optimal protocol to steer a system between assigned boundary conditions while minimizing a given cost functional in finite time. Equations arising from these types of problems are often non-linear and difficult to solve numerically. In this note, we describe numerical methods of integration for two partial differential equations that commonly arise in optimal control theory: the Fokker-Planck equation driven by a mechanical potential for which we use Girsanov theorem; and the Hamilton-Jacobi-Bellman, or dynamic programming, equation for which we find the gradient of its solution using the Bismut-Elworthy-Li formula. The computation of the gradient is necessary to specify the optimal protocol. Finally, we give an example application in solving an optimal control problem without spacial discretization by machine learning.},
   archiveprefix = {arXiv},
   copyright     = {arXiv.org perpetual, non-exclusive license},
-  doi           = {10.48550/ARXIV.2411.08518},
+  doi           = {10.3390/e27030218},
   eprint        = {2411.08518},
   owner         = {paolo},
   primaryclass  = {math.OC},
-  publisher     = {arXiv},
+  publisher     = {MDPI},
   ranking       = {{On the numerical integration of the Fokker-Planck equation driven by a mechanical force and the Bismut-Elworthy-Li formula}},
-  url           = {https://doi.org/10.48550/arXiv.2411.08518},
+  url           = {https://doi.org/10.3390/e27030218},
 }
 
 @Article{VaCaMG2024,
