--- a/_bibliography/muratore-ginanneschi.bib
+++ b/_bibliography/muratore-ginanneschi.bib
@@ -1121,22 +1121,25 @@
   url         = {https://doi.org/10.1088/1751-8121/adaa3f},
 }
 
-@Article{SaBaMG2024_2,
+@Article{SaBaMG2025,
   author      = {Sanders, Julia and Baldovin, Marco and Muratore-Ginanneschi, Paolo},
-  journal     = {Eprint arXiv:2407.15678},
+  journal     = {Physical Review E},
   title       = {{Minimal-work protocols for inertial particles in non-harmonic traps}},
-  year        = {2024},
-  abbr        = {Eprint},
-  month       = jul,
+  year        = {2025},
+  abbr        = {Phys. Rev. E},
+  month       = mar,
+  pages       = {034127},
+  volume      = {111},
   abstract    = {The progress of miniaturized technology allows controlling physical systems at nanoscale with remarkable precision in regimes where thermal fluctuations are non-negligible. Experimental advancements have sparked interest in control problems in stochastic thermodynamics, typically concerning a time-dependent potential applied to a nanoparticle to reach a target stationary state in a given time with minimal energy cost. We study this problem for a particle subject to thermal fluctuations in a regime that takes into account the effects of inertia, and, building on the results of [1], provide a numerical method to find optimal controls even for non-Gaussian initial and final conditions corresponding to non-harmonic confinements. We show that the momentum mean tends to a constant value along the trajectory except at the boundary and the evolution of the variance is non-trivial. Our results also support that the lower bound on the optimal entropy production computed from the overdamped case is tight in the adiabatic limit.},
   copyright   = {arXiv.org perpetual, non-exclusive license},
   date        = {2024-07-22},
-  doi         = {10.48550/ARXIV.2407.15678},
+  doi         = {10.1103/PhysRevE.111.034127},
   eprint      = {2407.15678},
   eprintclass = {cond-mat.stat-mech},
   eprinttype  = {arXiv},
   owner       = {paolo},
   ranking     = {{Minimal-work protocols for inertial particles in non-harmonic traps}},
+  url         = {https://doi.org/10.1103/PhysRevE.111.034127},
 }
 
 @Article{CaBaLuMGVu2024,
