--- a/_bibliography/muratore-ginanneschi.bib
+++ b/_bibliography/muratore-ginanneschi.bib
@@ -1186,23 +1186,26 @@
   url           = {https://doi.org/10.3390/e27030218},
 }
 
-@Article{VaCaMG2024,
-  author        = {Vaaranta, Antti and Cattaneo, Marco and Muratore-Ginanneschi, Paolo},
-  journal       = {Eprint arXiv:2411.18310},
-  title         = {{Analytical solutions of the open Jaynes-Cummings and quantum Rabi models}},
-  year          = {2024},
-  abbr          = {Eprint},
-  month         = nov,
-  abstract      = {The Jaynes-Cummings and quantum Rabi models are fundamental to cavity and circuit quantum electrodynamics, as they describe the simplest form of light-matter interaction, where a single qubit is coupled to a single bosonic mode. A scenario that is commonly encountered in the experimental practice arises when the bosonic mode interacts with an external dissipative thermal bath, making the qubit-boson system open. In this work, we present new analytical solutions of the Lindblad master equations for the open Jaynes-Cummings and quantum Rabi models in the limit of weak qubit-boson coupling $g$, using the holomorphic formalism in Bargmann space. Specifically, we derive the most general solution of the local Lindblad master equation for the open dispersive Jaynes-Cummings model coupled to a thermal bath, with the only assumptions that the initial state of the qubit-boson system is separable. Additionally, we obtain a perturbative analytical solution for the open quantum Rabi model up to second order in $g$. Notably, our findings include a new formula for the qubit's steady state at zeroth order, showing that the stationary populations depend on both qubit and boson frequencies in the quantum Rabi model, but not in the Jaynes-Cummings model. Our results are of general interest to the study of open quantum systems in the context of light-matter interaction.},
-  archiveprefix = {arXiv},
-  copyright     = {arXiv.org perpetual, non-exclusive license},
-  doi           = {10.48550/ARXIV.2411.18310},
-  eprint        = {2411.18310},
-  owner         = {paolo},
-  primaryclass  = {quant-ph},
-  publisher     = {arXiv},
-  ranking       = {{Analytical solutions of the open Jaynes-Cummings and quantum Rabi models}},
-  url           = {https://doi.org/10.48550/arXiv.2411.18310},
+@Article{VaCaMG2025,
+  author           = {Vaaranta, Antti and Cattaneo, Marco and Muratore-Ginanneschi, Paolo},
+  journal          = {Physical Review A},
+  title            = {{Analytical solution of the open dispersive Jaynes-Cummings model and perturbative analytical solution of the open quantum Rabi model}},
+  year             = {2025},
+  abbr             = {Eprint},
+  month            = may,
+  pages            = {053717},
+  volume           = {111},
+  abstract         = {The Jaynes-Cummings and quantum Rabi models are fundamental to cavity and circuit quantum electrodynamics, as they describe the simplest form of light-matter interaction, where a single qubit is coupled to a single bosonic mode. A scenario that is commonly encountered in the experimental practice arises when the bosonic mode interacts with an external dissipative thermal bath, making the qubit-boson system open. In this work, we present a new analytical solution of the Lindblad master equations for the open dispersive Jaynes-Cummings model and a perturbative analytical solution of the open quantum Rabi model in the limit of weak qubit-boson coupling $g$, using the holomorphic formalism in Bargmann space. Specifically, we derive the most general solution of the local Lindblad master equation for the open dispersive Jaynes-Cummings model coupled to a thermal bath, with the only assumptions that the initial state of the qubit-boson system is separable. Additionally, we obtain a perturbative analytical solution for the open quantum Rabi model up to second order in $g$. Notably, our findings include a new formula for the qubit's steady state at zeroth order, showing that the stationary populations depend on both qubit and boson frequencies in the quantum Rabi model, but not in the Jaynes-Cummings model, regardless of the value of $g$. Our results are of general interest to the study of open quantum systems in the context of light-matter interaction.},
+  archiveprefix    = {arXiv},
+  copyright        = {arXiv.org perpetual, non-exclusive license},
+  doi              = {10.1103/PhysRevA.111.053717},
+  eprint           = {2411.18310},
+  modificationdate = {2025-05-20T21:25:53},
+  owner            = {paolo},
+  primaryclass     = {quant-ph},
+  publisher        = {American Physical Society},
+  ranking          = {{Analytical solutions of the open Jaynes-Cummings and quantum Rabi models}},
+  url              = {https://doi.org/10.1103/PhysRevA.111.053717},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
