--- a/_bibliography/muratore-ginanneschi.bib
+++ b/_bibliography/muratore-ginanneschi.bib
@@ -1209,7 +1209,7 @@
 }
 
 @Article{ChvEnKiMG2025,
-  author           = {Chruściński, Dariusz and vom Ende, Frederik and Kimura, Gen and Muratore-Ginanneschi, Paolo},
+  author           = {Chruściński, Dariusz and {vom Ende}, Frederik and Kimura, Gen and Muratore-Ginanneschi, Paolo},
   journal          = {Eprint arXiv:2505.24467},
   title            = {{A universal constraint for relaxation rates for quantum Markov generators: complete positivity and beyond}},
   year             = {2025},
@@ -1221,7 +1221,7 @@
   creationdate     = {2025-06-02T18:41:22},
   doi              = {10.48550/ARXIV.2505.24467},
   eprint           = {2505.24467},
-  modificationdate = {2025-06-02T18:54:10},
+  modificationdate = {2025-06-02T18:55:30},
   owner            = {paolo},
   primaryclass     = {quant-ph},
   publisher        = {arXiv},
