--- a/_bibliography/muratore-ginanneschi.bib
+++ b/_bibliography/muratore-ginanneschi.bib
@@ -1221,12 +1221,31 @@
   creationdate     = {2025-06-02T18:41:22},
   doi              = {10.48550/ARXIV.2505.24467},
   eprint           = {2505.24467},
-  modificationdate = {2025-06-02T18:55:30},
+  modificationdate = {2025-06-04T10:50:56},
   owner            = {paolo},
   primaryclass     = {quant-ph},
-  publisher        = {arXiv},
   ranking          = {{A universal constraint for relaxation rates for quantum Markov generators: complete positivity and beyond}},
   url              = {https://doi.org/10.48550/arXiv.2505.24467},
+}
+
+@Article{vEnChKiMG2025,
+  author           = {{vom Ende}, Frederik and Chruściński, Dariusz and Kimura, Gen and Muratore-Ginanneschi, Paolo},
+  journal          = {Eprint arXiv:2506.02145},
+  title            = {{Universal Bound on the Eigenvalues of 2-Positive Trace-Preserving Maps}},
+  year             = {2025},
+  abbr             = {Eprint},
+  month            = jun,
+  abstract         = {We prove an upper bound on the trace of any 2-positive, trace-preserving map in terms of its smallest eigenvalue. We show that this spectral bound is tight, and that 2-positivity is necessary for this inequality to hold in general. Moreover, we use this to infer a similar bound for generators of one-parameter semigroups of 2-positive trace-preserving maps. With this approach we generalize known results for completely positive trace-preserving dynamics while providing a significantly simpler proof that is entirely algebraic.},
+  archiveprefix    = {arXiv},
+  copyright        = {arXiv.org perpetual, non-exclusive license},
+  creationdate     = {2025-06-04T10:49:21},
+  doi              = {10.48550/ARXIV.2506.02145},
+  eprint           = {2506.02145},
+  modificationdate = {2025-06-04T10:51:51},
+  owner            = {paolo},
+  primaryclass     = {math.RA},
+  ranking          = {{Universal Bound on the Eigenvalues of 2-Positive Trace-Preserving Maps}},
+  url              = {https://doi.org/10.48550/arXiv.2506.02145},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
