--- a/_bibliography/muratore-ginanneschi.bib
+++ b/_bibliography/muratore-ginanneschi.bib
@@ -642,24 +642,25 @@
 }
 
 @Article{PMGSc2017,
-  author        = {Paolo Muratore-Ginanneschi and Kay Schwieger},
-  journal       = {Entropy},
-  title         = {{An Application of Pontryagin' s Principle to Brownian Particle Engineered Equilibration}},
-  year          = {2017},
-  abbr          = {MDPI},
-  month         = {July},
-  number        = {7},
-  pages         = {379},
-  volume        = {19},
-  abstract      = {We present a stylized model of controlled equilibration of a small system in a fluctuating environment. We derive the equations governing the optimal control steering \emph{in finite time} the system between two equilibrium states. The corresponding thermodynamic transition is optimal in the sense that occurs at minimum entropy if the set of admissible controls is restricted by certain bounds on the time derivatives of the protocols. We apply our equations to the engineered equilibration of an optical trap considered in a recent proof of principle experiment. We also analyze an elementary model of nucleation previously considered by Landauer to discuss the thermodynamic cost of one bit of information erasure. We expect our model to be a useful benchmark for experiment design as it exhibits the same integrability properties of well known models of optimal mass transport by a compressible velocity field.},
-  archiveprefix = {arXiv},
-  doi           = {10.3390/e19070379},
-  eprint        = {1707.0059},
-  owner         = {paolo},
-  primaryclass  = {cond-mat.mes-hall},
-  publisher     = {{MDPI} {AG}},
-  ranking       = {{An Application of Pontryagin%27s Principle to Brownian Particle Engineered Equilibration}},
-  timestamp     = {2018.04.12},
+  author           = {Paolo Muratore-Ginanneschi and Kay Schwieger},
+  journal          = {Entropy},
+  title            = {{An Application of Pontryagin' s Principle to Brownian Particle Engineered Equilibration}},
+  year             = {2017},
+  abbr             = {MDPI},
+  month            = {July},
+  number           = {7},
+  pages            = {379},
+  volume           = {19},
+  abstract         = {We present a stylized model of controlled equilibration of a small system in a fluctuating environment. We derive the equations governing the optimal control steering \emph{in finite time} the system between two equilibrium states. The corresponding thermodynamic transition is optimal in the sense that occurs at minimum entropy if the set of admissible controls is restricted by certain bounds on the time derivatives of the protocols. We apply our equations to the engineered equilibration of an optical trap considered in a recent proof of principle experiment. We also analyze an elementary model of nucleation previously considered by Landauer to discuss the thermodynamic cost of one bit of information erasure. We expect our model to be a useful benchmark for experiment design as it exhibits the same integrability properties of well known models of optimal mass transport by a compressible velocity field.},
+  archiveprefix    = {arXiv},
+  doi              = {10.3390/e19070379},
+  eprint           = {1707.00596},
+  modificationdate = {2025-06-23T13:17:03},
+  owner            = {paolo},
+  primaryclass     = {cond-mat.mes-hall},
+  publisher        = {{MDPI} {AG}},
+  ranking          = {{An Application of Pontryagin%27s Principle to Brownian Particle Engineered Equilibration}},
+  timestamp        = {2018.04.12},
 }
 
 @Article{AfPMGGaMa2018,
@@ -1145,23 +1146,24 @@
   url         = {https://doi.org/10.1103/PhysRevE.111.034127},
 }
 
-@Article{CaBaLuMGVu2024,
-  author        = {Cattaneo, Marco and Baldovin, Marco and Lucente, Dario and Muratore-Ginanneschi, Paolo and Vulpiani, Angelo},
-  journal       = {Eprint arXiv:2409.06489},
-  title         = {{Thermalization is typical in large classical and quantum harmonic systems}},
-  year          = {2024},
-  abbr          = {Eprint},
-  month         = sep,
-  abstract      = {We establish an analytical criterion for dynamical thermalization within harmonic systems, applicable to both classical and quantum models. Specifically, we prove that thermalization of various observables, such as particle energies in physically relevant random quadratic Hamiltonians, is typical for large systems ($N \gg 1$) with initial conditions drawn from the microcanonical distribution. Moreover, we show that thermalization can also arise from non-typical initial conditions, where only a finite fraction of the normal modes is excited. Our findings provide a general dynamical basis for an approach to thermalization that bypasses chaos and ergodicity, focusing instead on observables dependent on a large number of normal modes, and build a bridge between the classical and quantum theories of thermalization.},
-  archiveprefix = {arXiv},
-  copyright     = {arXiv.org perpetual, non-exclusive license},
-  doi           = {10.48550/ARXIV.2409.06489},
-  eprint        = {2409.06489},
-  owner         = {paolo},
-  primaryclass  = {cond-mat.stat-mech},
-  publisher     = {arXiv},
-  ranking       = {{Thermalization is typical in large classical and quantum harmonic systems}},
-  url           = {https://doi.org/10.48550/arXiv.2409.06489},
+@Article{CaBaLuMGVu2025,
+  author           = {Cattaneo, Marco and Baldovin, Marco and Lucente, Dario and Muratore-Ginanneschi, Paolo and Vulpiani, Angelo},
+  journal          = {Physical Review Research},
+  title            = {{Thermalization is typical in large classical and quantum harmonic systems}},
+  year             = {2025},
+  abbr             = {Phys. Rev. Res.},
+  month            = jun,
+  abstract         = {We establish an analytical criterion for dynamical thermalization within harmonic systems, applicable to both classical and quantum models. Specifically, we prove that thermalization of various observables, such as particle energies in physically relevant random quadratic Hamiltonians, is typical for large systems ($N \gg 1$) with initial conditions drawn from the microcanonical distribution. Moreover, we show that thermalization can also arise from non-typical initial conditions, where only a finite fraction of the normal modes is excited. Our findings provide a general dynamical basis for an approach to thermalization that bypasses chaos and ergodicity, focusing instead on observables dependent on a large number of normal modes, and build a bridge between the classical and quantum theories of thermalization.},
+  archiveprefix    = {arXiv},
+  copyright        = {arXiv.org perpetual, non-exclusive license},
+  doi              = {10.1103/h9fj-ylgm},
+  eprint           = {2409.06489},
+  modificationdate = {2025-06-14T01:45:14},
+  owner            = {paolo},
+  primaryclass     = {cond-mat.stat-mech},
+  publisher        = {American Physical Society},
+  ranking          = {{Thermalization is typical in large classical and quantum harmonic systems}},
+  url              = {https://doi.org/10.1103/h9fj-ylgm},
 }
 
 @Article{SaMG2025,
