--- a/_bibliography/muratore-ginanneschi.bib
+++ b/_bibliography/muratore-ginanneschi.bib
@@ -1152,18 +1152,21 @@
   title            = {{Thermalization is typical in large classical and quantum harmonic systems}},
   year             = {2025},
   abbr             = {Phys. Rev. Res.},
-  month            = jun,
+  month            = jul,
+  pages            = {L032002},
+  volume           = {7},
   abstract         = {We establish an analytical criterion for dynamical thermalization within harmonic systems, applicable to both classical and quantum models. Specifically, we prove that thermalization of various observables, such as particle energies in physically relevant random quadratic Hamiltonians, is typical for large systems ($N \gg 1$) with initial conditions drawn from the microcanonical distribution. Moreover, we show that thermalization can also arise from non-typical initial conditions, where only a finite fraction of the normal modes is excited. Our findings provide a general dynamical basis for an approach to thermalization that bypasses chaos and ergodicity, focusing instead on observables dependent on a large number of normal modes, and build a bridge between the classical and quantum theories of thermalization.},
   archiveprefix    = {arXiv},
   copyright        = {arXiv.org perpetual, non-exclusive license},
   doi              = {10.1103/h9fj-ylgm},
   eprint           = {2409.06489},
-  modificationdate = {2025-06-14T01:45:14},
+  issue            = {3},
+  modificationdate = {2025-07-02T17:18:06},
   owner            = {paolo},
   primaryclass     = {cond-mat.stat-mech},
   publisher        = {American Physical Society},
   ranking          = {{Thermalization is typical in large classical and quantum harmonic systems}},
-  url              = {https://doi.org/10.1103/h9fj-ylgm},
+  url              = {https://link.aps.org/doi/10.1103/h9fj-ylgm},
 }
 
 @Article{SaMG2025,
@@ -1248,6 +1251,26 @@
   primaryclass     = {math.RA},
   ranking          = {{Universal Bound on the Eigenvalues of 2-Positive Trace-Preserving Maps}},
   url              = {https://doi.org/10.48550/arXiv.2506.02145},
+}
+
+@Article{Resch2025,
+  author           = {Resch, Miriam and Ankerhold, Joachim and Donvil, Brecht I. C. and Muratore-Ginanneschi, Paolo and Golubev, Dmitry},
+  journal          = {Eprint arXiv:2508.04574},
+  title            = {{Quantum and classical Shapiro steps in small Josephson junctions}},
+  year             = {2025},
+  abbr             = {Eprint},
+  month            = aug,
+  abstract         = {We propose a model describing the formation of both dual (quantum) and classical Shapiro steps in small Josephson junctions. According to this model, the dual Shapiro steps are formed at relatively low frequency of the microwave signal and low microwave power, while the classical steps are formed in the opposite limit of high frequency and power. The crossover between the two regimes is controlled by a single parameter - the effective relaxation time of the environment. The model accounts for the effect of a large inductor in the bias circuit, which has been used in recent experiments to protect the junction from the high frequency noise of the environment. We predict the possibility of observing both types of steps in the same sample. Our model describes the I-V curves observed in the experiments with reasonable accuracy, thus opening up an opportunity for quantitative fitting of the data.},
+  archiveprefix    = {arXiv},
+  copyright        = {Creative Commons Attribution Non Commercial No Derivatives 4.0 International},
+  creationdate     = {2025-08-07T13:33:30},
+  doi              = {10.48550/ARXIV.2508.04574},
+  eprint           = {2508.04574},
+  modificationdate = {2025-08-07T13:37:31},
+  owner            = {paolo},
+  primaryclass     = {cond-mat.supr-con},
+  ranking          = {{Quantum and classical Shapiro steps in small Josephson junctions}},
+  url              = {https://doi.org/10.48550/arXiv.2508.04574},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
