--- a/_bibliography/muratore-ginanneschi.bib
+++ b/_bibliography/muratore-ginanneschi.bib
@@ -1215,22 +1215,24 @@
 
 @Article{ChvEnKiMG2025,
   author           = {Chruściński, Dariusz and {vom Ende}, Frederik and Kimura, Gen and Muratore-Ginanneschi, Paolo},
-  journal          = {Eprint arXiv:2505.24467},
+  journal          = {Reports on Progress on Physics},
   title            = {{A universal constraint for relaxation rates for quantum Markov generators: complete positivity and beyond}},
   year             = {2025},
-  abbr             = {Eprint},
-  month            = jun,
+  abbr             = {ROPP},
+  month            = sep,
+  pages            = {097602},
+  volume           = {88},
   abstract         = {Relaxation rates are key characteristics of quantum processes, as they determine how quickly a quantum system thermalizes, equilibrates, decoheres, and dissipates. While they play a crucial role in theoretical analyses, relaxation rates are also often directly accessible through experimental measurements. Recently, it was shown that for quantum processes governed by Markovian semigroups, the relaxation rates satisfy a universal constraint: the maximal rate is upper-bounded by the sum of all rates divided by the dimension of the Hilbert space. This bound, initially conjectured a few years ago, was only recently proven using classical Lyapunov theory. In this work, we present a new, purely algebraic proof of this constraint. Remarkably, our approach is not only more direct but also allows for a natural generalization beyond completely positive semigroups. We show that complete positivity can be relaxed to 2-positivity without affecting the validity of the constraint. This reveals that the bound is more subtle than previously understood: 2-positivity is necessary, but even when further relaxed to Schwarz maps, a slightly weaker -- yet still non-trivial -- universal constraint still holds. Finally, we explore the connection between these bounds and the number of steady states in quantum processes, uncovering a deeper structure underlying their behavior.},
   archiveprefix    = {arXiv},
   copyright        = {arXiv.org perpetual, non-exclusive license},
   creationdate     = {2025-06-02T18:41:22},
-  doi              = {10.48550/ARXIV.2505.24467},
+  doi              = {10.1088/1361-6633/ae075f},
   eprint           = {2505.24467},
-  modificationdate = {2025-06-04T10:50:56},
+  modificationdate = {2025-09-27T01:12:03},
   owner            = {paolo},
   primaryclass     = {quant-ph},
   ranking          = {{A universal constraint for relaxation rates for quantum Markov generators: complete positivity and beyond}},
-  url              = {https://doi.org/10.48550/arXiv.2505.24467},
+  url              = {https://doi.org/10.1088/1361-6633/ae075f},
 }
 
 @Article{vEnChKiMG2025,
